Fixed sidebar shift on search typing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 .sidebar {
+  min-width: 300px;
   flex: 1;
   padding: 20px;
   position: fixed;
@@ -82,8 +83,6 @@ a:hover {
 }
 
 .article_nav {
-  width: 100%;
-  max-width: 300px;
   padding-left: 10px;
   font-size: 80%;
 }
